@@ -194,7 +194,7 @@ wxFontMapper::CharsetToEncoding(const wxString& charset, bool interactive)
         // the dialog title
         wxString title(m_titleDialog);
         if ( !title )
-            title << wxTheApp->GetAppName() << _(": unknown charset");
+            title << wxTheApp->GetAppDisplayName() << _(": unknown charset");
 
         // the message
         wxString msg;
@@ -408,7 +408,7 @@ bool wxFontMapper::GetAltForEncoding(wxFontEncoding encoding,
     {
         wxString title(m_titleDialog);
         if ( !title )
-            title << wxTheApp->GetAppName() << _(": unknown encoding");
+            title << wxTheApp->GetAppDisplayName() << _(": unknown encoding");
 
         // built the message
         wxString encDesc = GetEncodingDescription(encoding),
